--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue 3 Dapp Starter</title>
+    <script
+      src="https://kit.fontawesome.com/a24ffbfaab.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Web3 Todo List</title>
   </head>
   <body>
     <div id="app"></div>
